--- a/public/back1/css/common.css
+++ b/public/back1/css/common.css
@@ -1,3 +1,30 @@
+/* 重置样式 */
+a:link,
+a:visited,
+a:link,
+a:active{
+  text-decoration: none;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.red{
+  color: #a94442;
+}
+/* 重置时.注意权重 */
+.table.table-bordered th,
+.table.table-bordered td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+
+
+
+/* 公共样式 */
 .body_bg{
   background-color: #222d32;
 }
@@ -9,4 +36,110 @@
 }
 .mt-150{
   margin-top: 150px;
+}
+
+/* 首页样式-左侧 */
+.lt_aside{
+  height: 100%;
+  width: 180px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  background-color: #222d32;
+  transition: all 1s;
+}
+/* 动态变化结束的效果 */
+.lt_aside.hidemenu {
+  left: -180px;
+}
+.lt_aside .brand{
+  width: 180px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 25px;
+}
+.lt_aside .brand a{
+  color: #fff;
+}
+.lt_aside .user{
+  padding-top: 30px;
+  height: 180px;
+}
+.lt_aside .user img{
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto ;
+}
+.lt_aside .user p{
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+}
+.lt_aside .nav li a{
+  display: block;
+  height: 40px;
+  line-height: 40px;
+  color: #fff;
+  padding-left: 40px;
+  border-left: 3px solid transparent;
+}
+.lt_aside .nav li a.current{
+  background-color: #1D1F21;
+  border-left: 3px solid #006699;
+}
+.lt_aside .nav li i{
+  margin-right: 5px;
+}
+.lt_aside .nav li .child{
+  display: none;
+}
+.lt_aside .nav li .child a{
+  padding-left: 60px;
+}
+/* 右侧头部 */
+.lt_main{
+  height: 1000px;
+  padding-left: 180px;
+  padding-top: 50px;
+  transition: all 1s;
+}
+.lt_main.hidemenu {
+  padding-left: 0px
+}
+.lt_topbar{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  padding-left: 180px;
+  background-color: #3C8DBC;
+  transition: all 1s;
+}
+.lt_topbar.hidemenu {
+  padding-left: 0px
+}
+.lt_topbar .icon_left,
+.lt_topbar .icon_right{
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: #fff;
+  font-size: 20px;
+}
+.breadcrumb{
+  margin-top: 20px;
+}
+.lt_content .echarts_left,
+.lt_content .echarts_right{
+  width: 48%;
+  height: 400px;
+  background-color: #ff0;
 }
