--- a/public/back2/css/common.css
+++ b/public/back2/css/common.css
@@ -80,3 +80,63 @@ ul{
   font-size: 22px;
   padding-top: 10px;
 }
+.lt_side .nav li a {
+   display: block;
+   height: 40px;
+   line-height: 40px;
+   text-align: center;
+   color: #fff;
+   border-left: 3px solid transparent;
+}
+.lt_side .nav i {
+  margin-right: 5px;
+}
+.lt_side .nav li a.current{
+  background-color: #1D1F21;
+  border-left: 3px solid #006699;
+}
+
+.lt_side .nav li .child{
+  display: none;
+}
+.lt_side .nav li .child a{
+  padding-left: 60px;
+}
+.lt_main{
+  height: 1000px;
+  padding-left: 180px;
+  padding-top: 50px;
+  transition: all 1s;
+}
+.lt_main.hidemenu{
+padding-left: 0;
+}
+.lt_topbar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #3c8dbc;
+  padding-left: 180px;
+  transition: all 1s;
+}
+.lt_topbar.hidemenu{
+   padding-left: 0;
+}
+.lt_topbar .icon_left,
+.lt_topbar .icon_right{
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
+}
+.lt_content .echarts_left,
+.lt_content .echarts_right{
+  width: 48%;
+  height: 400px;
+  background-color: #a4f;
+}
+
