--- a/public/front-a/css/index.css
+++ b/public/front-a/css/index.css
@@ -1,61 +1,11 @@
-html,body{
-  width: 100%;
-  height: 100%;
+.lt_nav {
+  padding: 10px;
+}
+.lt_nav li {
+  float: left;
+  width: 33.3%;
+}
+.lt_nav li a {
+  display: block;
 }
 
-/* 重置样式 */
-ul{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.lt_container{
-  width: 100%;
-  height: 100%;
-  background-color: pink;
-  overflow: hidden;
-  max-width: 640px;
-  min-width: 320px;
-  margin: 0  auto;
-
-  position: relative;
-
-  padding-top: 45px;
-  padding-bottom: 55px;
-}
-.lt_container .lt_header{
-  position: relative;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 45px;
-  background-color: #006699;
-
-  padding: 0  45px;
-}
-
-.lt_header .icon_left,
-.lt_header .icon_right{
-  width: 45px;
-  height: 45px;
-  position: absolute;
-  top: 0;
-  text-align: center;
-  line-height: 45px;
-  color: #fff;
-}
-.lt_header .icon_left {
-  left: 0;
-}
-.lt_header .icon_right {
-  right: 0;
-}
-.lt_header h3{
-  text-align: center;
-  font-size: 20px;
-  color: #fff;
-  line-height: 45px;
-  font-weight: normal;
-  margin: 0;
-}
